@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.131 2002/10/28 15:59:08 mike Exp $"
+ * "$Id: printers.c,v 1.132 2002/12/10 19:55:07 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -835,7 +835,8 @@ SetPrinterAttrs(printer_t *p)		/* I - Printer to setup */
   ppd_option_t	*input_slot,		/* InputSlot options */
 		*media_type,		/* MediaType options */
 		*page_size,		/* PageSize options */
-		*output_bin;		/* OutputBin options */
+		*output_bin,		/* OutputBin options */
+		*media_quality;		/* EFMediaQualityMode options */
   ipp_attribute_t *attr;		/* Attribute data */
   ipp_value_t	*val;			/* Attribute value */
   int		nups[] =		/* number-up-supported values */
@@ -1241,6 +1242,9 @@ SetPrinterAttrs(printer_t *p)		/* I - Printer to setup */
 	if ((page_size = ppdFindOption(ppd, "PageSize")) != NULL)
 	  num_media += page_size->num_choices;
 
+	if ((media_quality = ppdFindOption(ppd, "EFMediaQualityMode")) != NULL)
+	  num_media += media_quality->num_choices;
+
 	attr = ippAddStrings(p->attrs, IPP_TAG_PRINTER, IPP_TAG_KEYWORD,
                              "media-supported", num_media, NULL, NULL);
         if (attr != NULL)
@@ -1254,6 +1258,10 @@ SetPrinterAttrs(printer_t *p)		/* I - Printer to setup */
 	  if (media_type != NULL)
 	    for (i = 0; i < media_type->num_choices; i ++, val ++)
 	      val->string.text = strdup(media_type->choices[i].choice);
+
+	  if (media_quality != NULL)
+	    for (i = 0; i < media_quality->num_choices; i ++, val ++)
+	      val->string.text = strdup(media_quality->choices[i].choice);
 
 	  if (page_size != NULL)
 	  {
@@ -1269,6 +1277,9 @@ SetPrinterAttrs(printer_t *p)		/* I - Printer to setup */
 	  else if (media_type != NULL)
 	    ippAddString(p->attrs, IPP_TAG_PRINTER, IPP_TAG_KEYWORD, "media-default",
                 	 NULL, media_type->defchoice);
+	  else if (media_quality != NULL)
+	    ippAddString(p->attrs, IPP_TAG_PRINTER, IPP_TAG_KEYWORD, "media-default",
+                	 NULL, media_quality->defchoice);
 	  else
 	    ippAddString(p->attrs, IPP_TAG_PRINTER, IPP_TAG_KEYWORD, "media-default",
                 	 NULL, "none");
@@ -2081,5 +2092,5 @@ write_irix_state(printer_t *p)	/* I - Printer to update */
 
 
 /*
- * End of "$Id: printers.c,v 1.131 2002/10/28 15:59:08 mike Exp $".
+ * End of "$Id: printers.c,v 1.132 2002/12/10 19:55:07 mike Exp $".
  */
